# steward

./: .gitignore  DEEP_REVIEW.md  DESIGN-candidate-actions.md  DESIGN-next-nl-scenario.md  MILESTONE.md  PROGRESS.md  README.md  RECOVERY_CHECKLIST.md  ROADMAP.md  STEWARD_V2_PROGRESS.md  pyproject.toml
steward_service/: approval_store.py  audit_store.py  candidate_set_store.py  canonical.py  capability_registry.py  decision_store.py  domain.py  effective_policy.py  execution_store.py  governance.py  governance_context.py  identity.py  institution_engine.py  institution_rules.py  institution_store.py  main.py  openshell_client.py  policy_merge_layer.py  proposal_service.py  proposal_store.py  registry_catalog.py  technical_governance.py
steward_service/data/: __init__.py  effective_policy_merge.json  institution_expenditure_rules.json  technical_draft_policy_governance.json
steward_service/storage/: __init__.py  factory.py  protocols.py  (+2 more)
tests/: __init__.py  test_action_simulate_contract.py  test_approval_happy_path.py  test_approve_matching.py  test_candidate_evaluate_endpoint.py  test_effective_policy_phase4.py  test_execute_user_hint.py  test_governance_bulk_approval_required.py  test_governance_context.py  test_governance_unknown_actions.py  test_institution_engine.py  test_institution_expenditure.py  test_policy_merge_layer_definitions.py  test_proposal_phase1.py  test_proposal_phase2.py  test_proposal_phase3.py  test_registry_policy_definition.py  test_sqlite_storage_durability.py  test_steward_v2_phases_5_9.py  test_technical_governance_definitions.py
(+2 files in other folders)
