 [project]
 name = "steward"
 version = "0.0.1"
 description = "Steward governance plane service"
requires-python = ">=3.9"
 dependencies = [
   "fastapi>=0.110",
   "uvicorn[standard]>=0.27",
   "grpcio>=1.60",
   "protobuf>=4.25,<5",
   "grpcio-tools>=1.60",
 ]
 
 [project.optional-dependencies]
 dev = [
   "ruff>=0.4",
 ]
 
 [tool.uvicorn]
 factory = false
